# groupchat_ai

./: .gitignore  README.md  index.html  main.py  pyproject.toml
src/: ai_assistant.py
