[project]
name = "groupchat-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "uvicorn>=0.34.0",
    "langchain-groq>=0.2.3",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.2.9",
    "langchain==0.3.7",
    "langchain-community>=0.3.7",
    "langgraph==0.2.34",
]
